--- a/index.html
+++ b/index.html
@@ -8,15 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-<div class="container">
+<div class="container pt-5">
     <h1>My First Bootstrap page</h1>
     <p>This is inside a .container class.</p>
     <p>The .container class provides a responsive fixed with container</p>
 </div>
 <div class="container-fluid" style="background-color: blueviolet;">
-    <h1>My First Bootstrap page</h1>
-    <p>This is inside a .container class.</p>
-    <p>The .container class provides a responsive fixed with container</p>
+    <div class="row">
+        <div class="col"> column-1</div>
+        <div class="col">column-2</div>
+        <div class="col">column-3</div>
+      </div>
+
+      <div class="row">
+        <div class="col-4"> column-4</div>
+        <div class="col-8">column-5</div>
+        <div class="col">column-extra</div>
+
+      </div>
+      
+      </div>
 </div>
+<!-- <div class="container p-5 my-5 border">container p-5 my-5 border</div>
+
+<div class="container p-5 my-5 bg-dark text-white">container p-5 my-5 bg-dark text-white</div>
+
+<div class="container p-5 my-5 bg-primary text-white">container p-5 my-5 bg-primary text-white"</div> -->
 </body>
 </html>
