--- a/productdesc.html
+++ b/productdesc.html
@@ -9,7 +9,8 @@
     <style>body{
         margin: 5px;
         padding: 5px;
-    }</style>
+    }
+    </style>
     <title>Document</title>
 </head>
 <body>
@@ -36,7 +37,12 @@
                     <div class="card-header">
                         <div> <span><input type="radio"><strong style="font-size: x-large;">₹952</strong> <span style="text-decoration: line-through;">₹1249</span> <span style="color: rgb(28, 255, 28); font-weight: 900;">23%off</span> </span>
 
-<input type="radio"><p><strong style="font-size: x-large;">₹952</strong> + free shipping wuth <span style="background-color: brown; font-weight: 700; color: white;">care plans</span></p>
+
+                        </div>
+                        <div>
+                            <span>
+                                <input type="radio"><strong style="font-size: x-large;">₹952</strong> + free shipping wuth <span style="background-color: brown; font-weight: 700; color: white;">care plans</span>
+                            </span>
                         </div>
                     </div>
                     <div class="card-body">
