--- a/user.html
+++ b/user.html
@@ -16,7 +16,35 @@
             <div class="col-3 bg-dark text-white">social media</div>
           </div>
           <div class="row">
-            <div class="col-12 col-lg-2 bg-primary" style="height: auto;">sidebar</div>
+            <div class="col-12 col-lg-2" style="height: auto;">
+
+                <!-- Offcanvas Sidebar -->
+<div class="offcanvas offcanvas-start" id="demo" style="max-width: 270px;">
+    <div class="offcanvas-header">
+      <h1 class="offcanvas-title">Heading</h1>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
+    </div>
+    <div class="offcanvas-body">
+    <ul>
+        <li>  <p><a href="" data-bs-toggle="collapse" data-bs-target="#demo1">About student 1</a></p> </li>
+        <div id="demo1" class="collapse" style="border-bottom: 1px solid black;">About Student 1 button </div>
+        <li><p><a href=""data-bs-toggle="collapse" data-bs-target="#demo2">About student 2</a></p></li>
+        <div id="demo2" class="collapse" style="border-bottom: 1px solid black;">About Student 2 button </div>
+        <li><p><a href=""data-bs-toggle="collapse" data-bs-target="#demo3">About student 3</a></p></li>
+        <div id="demo3" class="collapse" style="border-bottom: 1px solid black;">About Student 3 button </div>
+    </ul>
+
+   
+  
+      <button class="btn btn-secondary" type="button">About us</button>
+    </div>
+  </div>
+  
+  <!-- Button to open the offcanvas sidebar -->
+  <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo" style="background-color: aqua;width: 100%; color: black; font-weight: 700;">
+     Sidebar
+  </button>
+            </div>
             <div class="col-12 col-lg-10" >
                 <table class="table table-striped table-hover  table-dark">
                     <tr>
